--- a/css/mobil-index.css
+++ b/css/mobil-index.css
@@ -15,10 +15,9 @@
     padding: 0;
     border: none;
     background: transparent;
-    font-family: var(--font-display--family);
-    font-size: var(--mobil-krom-typ-storlek, var(--verk-lank-storlek));
-    font-weight: 400;
-    line-height: var(--mobil-krom-typ-rad-hojd, var(--verk-lank-rad-hojd));
+    font: 400 var(--mobil-krom-typ-storlek, var(--verk-lank-storlek)) /
+      var(--mobil-krom-typ-rad-hojd, var(--verk-lank-rad-hojd))
+      var(--font-display--family);
     letter-spacing: var(--tracking-wide);
     text-transform: uppercase;
     color: var(--color-foreground);
@@ -38,10 +37,9 @@
     padding: 0;
     border: none;
     background: transparent;
-    font-family: var(--font-display--family);
-    font-size: var(--mobil-krom-typ-storlek, var(--verk-lank-storlek));
-    font-weight: 400;
-    line-height: var(--mobil-krom-typ-rad-hojd, var(--verk-lank-rad-hojd));
+    font: 400 var(--mobil-krom-typ-storlek, var(--verk-lank-storlek)) /
+      var(--mobil-krom-typ-rad-hojd, var(--verk-lank-rad-hojd))
+      var(--font-display--family);
     letter-spacing: var(--tracking-wide);
     text-align: inherit;
     color: var(--color-foreground);
@@ -80,22 +78,20 @@
       display: contents;
     }
 
-    .mobil-index-knapp,
-    .sidfot-lank {
-      font-size: var(--mobil-krom-typ-storlek);
-      line-height: var(--mobil-krom-typ-rad-hojd);
-    }
-
     .mobil-index-knapp {
       display: flex;
       align-items: center;
+      align-self: center;
       justify-content: flex-end;
       grid-column: 2 / 3;
       grid-row: 1 / 2;
       justify-self: end;
-      align-self: center;
+      min-height: var(--mobil-krom-typ-rad-hojd);
+      padding-block: 0;
       padding-inline-start: 0;
       padding-inline-end: var(--grid-cell-gutter);
+      font: 400 var(--mobil-krom-typ-storlek) / var(--mobil-krom-typ-rad-hojd)
+        var(--font-display--family);
       pointer-events: auto;
     }
 
@@ -114,14 +110,21 @@
     }
 
     .sidfot-lank--namn {
+      display: flex;
+      align-items: center;
+      align-self: center;
       grid-column: 1 / 2;
       grid-row: 1 / 2;
       width: 100%;
       max-width: 100%;
       justify-self: stretch;
+      min-height: var(--mobil-krom-typ-rad-hojd);
+      padding-block: 0;
       padding-inline-start: var(--grid-cell-gutter);
       padding-inline-end: 0;
       text-align: start;
+      font: 400 var(--mobil-krom-typ-storlek) / var(--mobil-krom-typ-rad-hojd)
+        var(--font-display--family);
     }
 
     .galleri-zon {
