--- a/css/typography.css
+++ b/css/typography.css
@@ -1,10 +1,14 @@
 
-@layer base {
-  @font-face {
-    font-family: "Mrs Eaves Lining OT";
-    src: url("../assets/fonts/mrs-eaves-lining-ot.woff") format("woff");
-    font-weight: 400;
-    font-style: normal;
-    font-display: swap;
+@font-face {
+  font-family: "Mrs Eaves Lining OT";
+  src: url("../assets/fonts/mrs-eaves-lining-ot.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@layer tokens {
+  [data-grid="001"] {
+    --font-display--family: "Mrs Eaves Lining OT", Georgia, "Times New Roman", serif;
   }
 }
